force-app/main/default/objects/Sentry_Retention_Policy__mdt/Sentry_Retention_Policy__mdt.object-meta.xml
<CustomObject>
    <description>Retention rules by event type for operational and compliance data windows.</description>
    <label>Sentry Retention Policy</label>
    <pluralLabel>Sentry Retention Policies</pluralLabel>
</CustomObject>