force-app/main/default/objects/Sentry_Retention_Policy__mdt/fields/Compliance_Days__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Days__c</fullName>
    <label>Compliance Days</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>