force-app/main/default/objects/Sentry_Retention_Policy__mdt/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>