force-app/main/default/objects/Sentry_Retention_Policy__mdt/fields/Operational_Days__c.field-meta.xml
<CustomField>
    <fullName>Operational_Days__c</fullName>
    <label>Operational Days</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>